fix alignment issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,3 @@
-$BGC:red;
-
 * {
     box-sizing: border-box;
     margin:0;
@@ -13,7 +11,6 @@ html {
 body {
     overflow: hidden;
     position: absolute;
-    
     top:0;
     left:0;
 }
@@ -37,20 +34,16 @@ video {
     height: 100vh;
     margin:0;
     padding:0;
-    /*background-color: gray;*/
     overflow: hidden;
     z-index: 2;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .blob {
-    /*background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);*/
+    
     background-color: white;
     border-radius: 15px;
     padding: 10px;
-    /*border: 1px black solid;
-    box-shadow: 10px 5px 5px;*/
     opacity: 0.8;
 }
 
@@ -88,37 +81,35 @@ button:hover {
     background: #ffb703;
 }
 
-.selectors {
+#SessionSelector {
+    left: 66%;
+}
+
+#BreakSelector {
+    left: 33%;
+}
+
+.selectors { 
     position: absolute;
     top: 37%;
     font-size: 35px;
     display: grid;
     grid-template-columns: auto auto;
-}
-
-#BreakSelector {
-    left: 33%;
-    transform: translateX(-50%);
-    #break-label{
-        grid-column: 1/ span 2;
+    grid-column-gap: 20px;
+    button {
+        margin: 0 auto;
     }
-    #break-length{
+    transform: translateX(-50%);
+    div {
+        margin: 0 auto;
+        grid-column: 1/ span 2; 
+    } 
+    span {
         margin: 0 auto;
         grid-column: 1/ span 2;
     }
 }
 
-#SessionSelector {
-    left: 66%;
-    transform: translateX(-50%);
-    #session-label{
-        grid-column: 1/ span 2;
-    }
-    #session-length{
-        margin: 0 auto;
-        grid-column: 1/ span 2;
-    }
-}
 
 #mainDisplay {
     position: absolute;
